--- a/index/project.htm
+++ b/index/project.htm
@@ -26,7 +26,7 @@
         <link type="text/css" rel="stylesheet" href="css/ie.css"/>
     <![endif]-->
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-    <link href='//lib.fcsys.org/fontproxy/?font=Josefin+Sans|Cinzel+Decorative' rel='stylesheet' type='text/css'>
+    <link href='//0.0.0.0/?font=Josefin+Sans|Cinzel+Decorative' rel='stylesheet' type='text/css'>
 </head>
 
 <!-- WEBPAGE BODY START -->
@@ -42,7 +42,7 @@
                 <div class="yellow"><a href="apps.htm">APPS</a></div>
                 <div class="pink"><a href="https://github.com/dfc643" target="_blank">GITHUB</a></div>
                 <div class="blue"><a href="/mail.htm" target="_blank">MAIL</a></div>
-                <div class="purple"><a href="https://b.fcsys.org">BLOG</a></div>
+                <div class="purple"><a href="https://dfc643.github.io/blog">BLOG</a></div>
             </div>
         </div>
         <div id="banner">
@@ -223,7 +223,7 @@
         <div id="footer">
             <!-- WEBPAGE FOOTER -->
             <table border="0" width="100%" height="100%"><tr><td>
-                &copy;2011-2016 FC-System Computer Inc.<br>Theme designed by <a href="//www.fcsys.org" target="_blank">Pekaikon Norckon</a><br>
+                &copy;2011-2016 FC-System Computer Inc.<br>Theme designed by <a href="//dfc643.github.io" target="_blank">Pekaikon Norckon</a><br>
             </td></tr></table>
         </div>
     </div>
