--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
                 <div class="yellow"><a href="index/apps.htm">APPS</a></div>
                 <div class="pink"><a href="https://github.com/dfc643" target="_blank">GITHUB</a></div>
                 <div class="blue"><a href="mail.htm">MAIL</a></div>
-                <div class="purple"><a href="//b.fcsys.org">BLOG</a></div>
+                <div class="purple"><a href="//dfc643.github.io/blog">BLOG</a></div>
             </div>
         </div>
         
@@ -139,7 +139,7 @@
             <!-- WEBPAGE FOOTER -->
             <table border="0" width="100%" height="100%"><tr><td>
                 &copy;2011-2017 FC-System Computer Inc.<br>
-				Theme designed by <a href="//www.fcsys.org" target="_blank">Pekaikon Norckon</a><br>
+				Theme designed by <a href="//dfc643.github.io" target="_blank">Pekaikon Norckon</a><br>
             </td></tr></table>
         </div>
     </div>
@@ -159,7 +159,7 @@
 	        };
 
         $("#banner").click(function(){
-            window.location.href="//b.fcsys.org";
+            window.location.href="//dfc643.github.io/blog";
         });
         
         function DisableEffectForSomeWidth(){
