--- a/index/apps.htm
+++ b/index/apps.htm
@@ -26,7 +26,7 @@
         <link type="text/css" rel="stylesheet" href="css/ie.css"/>
     <![endif]-->
     <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-    <link href='//lib.fcsys.org/fontproxy/?font=Josefin+Sans|Cinzel+Decorative' rel='stylesheet' type='text/css'>
+    <link href='//0.0.0.0/?font=Josefin+Sans|Cinzel+Decorative' rel='stylesheet' type='text/css'>
 </head>
 
 <!-- WEBPAGE BODY START -->
@@ -42,7 +42,7 @@
                 <div class="yellow current">APPS</div>
                 <div class="pink"><a href="//github.com/dfc643" target="_blank">GITHUB</a></div>
                 <div class="blue"><a href="/mail.htm" target="_blank">MAIL</a></div>
-                <div class="purple"><a href="//b.fcsys.org">BLOG</a></div>
+                <div class="purple"><a href="//dfc643.github.io/blog">BLOG</a></div>
             </div>
         </div>
         <div id="banner">
@@ -89,14 +89,14 @@
                 <t>IP Location</t>
                 <p>
 					<div class="imgbox"><img src="images/ip.jpg"/></div>
-					<div class="content">Check where is your IP location or where is the Server location. [<a href="//fcsys.org/ip.np">Goto</a>]</div>
+					<div class="content">Check where is your IP location or where is the Server location. [<a href="//dfc643.github.io/ip.np">Goto</a>]</div>
 				</p>
             </div>
             <div class="purple">
                 <t>IPTV Channel List</t>
                 <p>
 					<div class="imgbox"><img src="images/iptv.png"/></div>
-					<div class="content">Browser newest IPTV channel list or get streaming link. [<a href="//fcsys.org/dianshijia.np">Goto</a>]</div>
+					<div class="content">Browser newest IPTV channel list or get streaming link. [<a href="//dfc643.github.io/dianshijia.np">Goto</a>]</div>
 				</p>
             </div>
             <div class="pink">
@@ -118,7 +118,7 @@
         <div id="footer">
             <!-- WEBPAGE FOOTER -->
             <table border="0" width="100%" height="100%"><tr><td>
-                &copy;2011-2016 FC-System Computer Inc.<br>Theme designed by <a href="//www.fcsys.org" target="_blank">Pekaikon Norckon</a><br>
+                &copy;2011-2016 FC-System Computer Inc.<br>Theme designed by <a href="//dfc643.github.io" target="_blank">Pekaikon Norckon</a><br>
             </td></tr></table>
         </div>
     </div>
