--- a/index_old.htm
+++ b/index_old.htm
@@ -41,13 +41,13 @@
                 <div class="yellow"><a href="index/apps.htm">APPS</a></div>
                 <div class="pink"><a href="https://github.com/dfc643" target="_blank">GITHUB</a></div>
                 <div class="blue"><a href="http://file.dfc643.tk/" target="_blank">DATA</a></div>
-                <div class="purple"><a href="https://b.fcsys.org">BLOG</a></div>
+                <div class="purple"><a href="https://dfc643.github.io/blog">BLOG</a></div>
             </div>
         </div>
         <div id="banner">
             <div class="banner-inner">
                 <!-- BANNER TITLE HERE -->
-                <p class="banner-title"><a href="https://b.fcsys.org" title="Enter Norckon's blog">&gt;&gt; Norckon's blog &lt;&lt;</a></p>
+                <p class="banner-title"><a href="https://dfc643.github.io/blog" title="Enter Norckon's blog">&gt;&gt; Norckon's blog &lt;&lt;</a></p>
                 <!-- BANNER DESC TEXT HERE -->
                 <p class="banner-text" style="padding-top:174px; padding-left:170px;">Warde hi goodjou</p>
                 <p class="banner-text" style="padding-top:163px; padding-left:458px;">你好世界</p>
@@ -93,7 +93,7 @@
             <!-- WEBPAGE FOOTER -->
             <table border="0" width="100%" height="100%"><tr><td>
                 &copy;2011-2015 FC-System Computer Inc.<br>
-				Theme designed by <a href="//www.fcsys.org" target="_blank">Pekaikon Norckon</a><br>
+				Theme designed by <a href="//dfc643.github.io" target="_blank">Pekaikon Norckon</a><br>
             </td></tr></table>
         </div>
     </div>
